# mini-manim

./: .gitignore  README.md  pyproject.toml
mini_manim/: __init__.py  cli.py
mini_manim/animations/: __init__.py  fade.py  move.py  rotate.py  scale.py
mini_manim/core/: __init__.py  animation.py  mobject.py  renderer.py  timeline.py
mini_manim/mobjects/: __init__.py  shapes.py
